# point_cloud_practice

./: README.md  Readme.md
KdTree/: CMakeLists.txt  KdTree.cpp
conditional_radius_outliber_filter/: CMakeLists.txt  conditional_filter.cpp  radius_outlier_filter.cpp
downsampling_voxel/: CMakeLists.txt  downsampling_voxel.cpp
extract_border_from_rangeimage/: CMakeLists.txt  extract_border.cpp  fig_cluster4.pcd  new_cluster6.pcd
fast_point_feature_histograms/: CMakeLists.txt  fast_point_feature_histograms.cpp
icp/: CMakeLists.txt  icp.cpp
normal_estimation_using_integral_image/: CMakeLists.txt  normal_estimation_using_integral_images.cpp  normal_kdtree.cpp
normal_vector_visualization/: normal_vector_visualization.py
passthrough_filter/: CMakeLists.txt  passthrough_filter.cpp  passthrough_filter.py
pcd_files/data/: .~lock.bun000.pcd#  bun045.pcd  bun090.pcd  bun180.pcd  bun270.pcd  bun315.pcd  passfilter_pc.pcd
point_cloud_compression_octree/: CMakeLists.txt  point_cloud_compression_octree.cpp
point_feature_histograms/: CMakeLists.txt  point_feature_histograms.cpp
projecting_points/: CMakeLists.txt  black_test.py  mouseclick.py  pointcloud2img.py  projecting_points.cpp  projecting_points.py
range_image/: CMakeLists.txt  new_cluster4.pcd  range_image.cpp
read_pcd/: CMakeLists.txt  read_pcd.cpp  read_pcd.py  read_pcd_rgb.cpp  read_pcd_visualize.cpp
region_growing_segmentation/: CMakeLists.txt  region_growing_segmentation.cpp
segementation/: CMakeLists.txt  segementation.cpp
statistical_outlier_filter/: CMakeLists.txt  statistical_outlier_filter.cpp  statistical_outlier_filter.py
